--- a/index.css
+++ b/index.css
@@ -68,6 +68,11 @@ html,body {
     background-color: orange;
 }
 
+.scared-ghost {
+    background-color: aquamarine;
+    border: none;
+}
+
 @media (min-width: 768px) and (min-height: 812px) {
     .grid {
         width: 630px;
